Correction du script